pamc/src/tests/sample_code/should_fail/type_check/labeledness_mismatch/unlabeled_type_labeled_args.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

type List(T: Type) {
    .Nil(~Item: Type): List(Item),
    .Cons(~Item: Type, ~car: Item, ~cdr: List(Item)): List(Item),
}

let right = List(Nat);
let wrong = List(Item: Nat);
